--- a/index.html
+++ b/index.html
@@ -2219,62 +2219,80 @@ best school proxies
 7 proxies
 7 proxies meme
 8 schools
-8 schoolhouse place oyster bay
-8 school association">
+8 schoolhouse place oyster bay 8 school association">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
     <meta name="googlebot" content="index, follow, snippet" />
     <link rel="stylesheet" href="index.css">
-</script>
-<body onload = "showAlert()" >
 </head>
+    <body onload = "about()" >
+
 
 <body>
-<br><br><br>
-<br><br>
-<br><br>
-    </div>
+    <nav class="menu-bar">
+        <div class="group">
+          <a href="index.html" class="item">Untitled Proxy</a>
+        </div>
+        <div class="group">
+          <a href="https://untitledproxy.pages.dev/service/hvtrs8%2F-dksaopd%2Ccmm-" class="item">Discord</a>
+        </div>
+        <div class="group">
+            <a href="https://untitledproxy.pages.dev/service/hvtrs8%2F-pna%7B.eedopcgnmw%2Ccmm-mcln%2F" class="item">GeForce Now</a>
+        </div>
+        <div class="group">
+            <a href="https://untitledproxy.pages.dev/service/hvtrs8%2F-wuw%2Caoaxol.aoo%2Fcp-skglil%3Fmpgnkd%2Cpcpg.oaz_cuvh%5Daee%3F3402%26mpgnkd%2Crgtwrl_vo%3Fhvtrs'3C%250F'2Dlwnc.cmczmn%2Ccmm'2Dhmmg%26mpgnkd%2Cifeltkt%7B%3Djtvp'3C%250F'2Dsreas%2Corelif.lev%250Fcuvh'2D2%2C0'2Difeltkfkep_qeneat%24orelif.csqoa_jaldne%3Ftgmro%5Duq%26mpgnkd%2Cmmdg%3Dahgciif_qevur%26nalgwaee%3Fel_WS%24orelif.alcioef_kd%3Fhvtr%251A'2D%250Fqpgcq.mpgnkd%2Cngt'2Dawtj%250F0.2%250Fkdgnvidigr%5Dsglgcv%26mpgnkd%2Cnq%3Djtvp'3C%250F'2Dsreas%2Corelif.lev%250Fcuvh'2D2%2C0" class="item">Amazon Luna</a>
+        </div>
+        <div class="group">
+            <a href="https://untitledproxy.pages.dev/service/hvtrs8%2F-sjenlqhmci.ko-" class="item">Shell Shockers</a>
+        </div>
+        <div class="group">
+            <a href="https://untitledproxy.pages.dev/service/hvtrs8%2F-1t1%2Clml-" class="item">1v1.lol(NEW)</a>
+        </div>
+    </nav>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="desc">
         <h1 class="title">Untitled Proxy</h1><br><br>
     </div>
-<br>
     <form>
         <input class="search-input" placeholder="Search the web freely...">
     </form>
     <div class="text-center">
-   <button>About:Blank</button>
-<script>
-    var urlObj = new window.URL(window.location.href);
-    var url = "/index.html";
- 
-    if (url) {
-        var win;
- 
-        document.querySelector('button').onclick = function() {
-            if (win) {
-                win.focus();
-            } 
-            else {
-                win = window.open();
-                win.document.body.style.margin = '0';
-                win.document.body.style.height = '100vh';
-                var iframe = win.document.createElement('iframe');
-                iframe.style.border = 'none';
-                iframe.style.width = '100%';
-                iframe.style.height = '100%';
-                iframe.style.margin = '0';
-                iframe.src = url;
-                win.document.body.appendChild(iframe);
-                location.replace("https://lms.fcps.edu/home");
-            }
-        };
-    }
-</script>
-<style>*{color:white;font-family:arial;text-align:center}button{width:220px;height:40px;border-radius:12px;background-color:#080808;font-family:Arial,Helvetica,sans-serif;border:none;transition:background-color 500ms}button:hover{background-color:#080808}</style>
-  </div>
-<br>
+    <script>
+        var urlObj = new window.URL(window.location.href);
+        var url = "index.html";
+    
+        if (url) {
+            var win;
+    
+            function about() {
+                if (win) {
+                    win.focus();
+                } 
+                else {
+                    win = window.open();
+                    win.document.body.style.margin = '0';
+                    win.document.body.style.height = '100vh';
+                    var iframe = win.document.createElement('iframe');
+                    iframe.style.border = 'none';
+                    iframe.style.width = '100%';
+                    iframe.style.height = '100%';
+                    iframe.style.margin = '0';
+                    iframe.src = url;
+                    win.document.body.appendChild(iframe);
+                    location.replace("about:blank");
+                }
+            };
+        }
+    </script>
+    <style>*{color:white;font-family:arial;text-align:center}button{width:220px;height:40px;border-radius:12px;background-color:#080808;font-family:Arial,Helvetica,sans-serif;border:none;transition:background-color 500ms}button:hover{background-color:#080808}</style>
+    </div>
+    <br>
     <div>
     <footer style="bottom: 0; position: fixed;">
-        <p>&copy; Untitled Proxy</p>
+        <p>&copy; Untitled Proxy</p> <a href="https://discord.gg/vj8Uaa5P">Discord</a>
     </footer></div>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
