--- a/index.html
+++ b/index.html
@@ -2229,6 +2229,8 @@ best school proxies
 
 
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8465060523203457"
+     crossorigin="anonymous"></script>
     <nav class="menu-bar">
         <div class="group">
           <a href="index.html" class="item">Untitled Proxy</a>
