--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8465060523203457"
+     crossorigin="anonymous"></script>
     <meta name="google-site-verification" content="HhCdhvVbpA9bS8wlx-vdehC4F--GKQ66GH9c2USlTQU" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
