--- a/index.html
+++ b/index.html
@@ -2261,6 +2261,30 @@ best school proxies
     <div class="desc">
         <h1 class="title">Untitled Proxy</h1><br><br>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8465060523203457"
+     crossorigin="anonymous"></script>
+<!-- sides -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8465060523203457"
+     data-ad-slot="2636300766"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8465060523203457"
+     crossorigin="anonymous"></script>
+<!-- sides -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8465060523203457"
+     data-ad-slot="2636300766"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <form>
         <input class="search-input" placeholder="Search the web freely...">
     </form>
